--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/vcs.xml
 /.idea/appInsightsSettings.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
 /build
 /captures
